Add sample ELK configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -21,7 +21,7 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Http" ],
     "MinimumLevel": "Verbose",
     "WriteTo": [
       {
@@ -44,6 +44,19 @@
                 "path": "Logs/backoffice.txt",
                 "rollOnFileSizeLimit": true,
                 "fileSizeLimitBytes": "100000"
+              }
+            }
+          ]
+        }
+      },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "Http",
+              "Args": {
+                "requestUri": "http://host.docker.internal:28080/"
               }
             }
           ]
